--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   equatable: ^2.0.5
   flutter_bloc: ^8.1.5
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   logger: ^2.3.0
 
 
@@ -22,6 +24,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  hive_generator: ^1.1.0
+  build_runner: ^2.1.7
 
 flutter:
   uses-material-design: true
